sdks/novus-mundus-ts/tests/results/23-lifecycle-run1.txt
bun test v1.2.10 (db2e7d7f)

tests/e2e/23-lifecycle.test.ts:

[1m[34m━━━ Full Game Lifecycle - Setup ━━━[0m
[validator] Verifying program binaries...
[validator] All binaries found.
[validator] Killing any existing validator...
[validator] Cleared old ledger.
[validator] Starting solana-test-validator --reset ...
[validator] Programs: Novus Mundus, MPL Core, TLD House, ALT Name Service
[validator] Waiting for RPC... (0.8s)
[validator] Ready in 1.4s.
[setup] Airdropping SOL...
[setup] Initializing GameEngine + ShopConfig...
[setup] Initializing cities, heroes, research, shop items (parallel)...
[setup] All infrastructure ready in 2.4s.

# Unhandled error between tests
-------------------------------
167 |     } else {
168 |       if (typeof value === 'string') {
169 |         // assume base 58 encoding by default
170 |         const decoded = bs58__default.default.decode(value);
171 |         if (decoded.length != PUBLIC_KEY_LENGTH) {
172 |           throw new Error(`Invalid public key input`);
                      ^
error: Invalid public key input
      at new PublicKey (/Users/k/solana/game/vig-internal/sdks/novus-mundus-ts/node_modules/@solana/web3.js/lib/index.cjs.js:172:17)
      at <anonymous> (/Users/k/solana/game/vig-internal/sdks/novus-mundus-ts/tests/e2e/23-lifecycle.test.ts:223:45)
      at /Users/k/solana/game/vig-internal/sdks/novus-mundus-ts/tests/e2e/23-lifecycle.test.ts:186:1
-------------------------------

(fail) Full Game Lifecycle > runs the complete game lifecycle across all 24 systems

 0 pass
 1 fail
 1 error
Ran 1 tests across 1 files. [5.07s]
